--- a/app/templates/page_etablissement.html
+++ b/app/templates/page_etablissement.html
@@ -1,23 +1,23 @@
 {% extends "base.html" %}
 {% block content %}
-
-
-
 <div class="container">
     <!-- Détails de l'établissement -->
     <div class="etablissement-header">
         {{ afficher_objet('etablissement', etablissement, current_user, form_etab) }}
     </div>
 
-    <!-- Grille des flans -->
-    {{ afficher_grille('flan', etablissement.flans, current_user, form_flan, etablissement) }}
+    <!-- Grille des flans avec bouton d'ajout -->
+    <div class="flans-section">
+        <h3>Flans proposés</h3>
+        {{ afficher_grille('flan', etablissement.flans, current_user, form_flan, etablissement) }}
+    </div>
 
     <!-- Bouton retour -->
-           <div>
-            <a href="{{ url_for('main.index') }}" class="btn btn-back btn-with-icon">
-                <i class="fas fa-arrow-left"></i>
-                Retour à l'accueil
-            </a>
-        </div>
+    <div>
+        <a href="{{ url_for('main.index') }}" class="btn btn-back btn-with-icon">
+            <i class="fas fa-arrow-left"></i>
+            Retour à l'accueil
+        </a>
+    </div>
 </div>
 {% endblock %}
