--- a/app/templates/page_flan.html
+++ b/app/templates/page_flan.html
@@ -1,15 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
-
 <div class="container">
     <!-- Détails du flan -->
     <div class="etablissement-header">
         {{ afficher_objet('flan', flan, current_user, form_flan) }}
     </div>
-    <!-- Grille des évaluations -->
-    {{ afficher_grille('evaluation', flan.evaluations, current_user, form_eval, etablissement, flan) }}
 
-
+    <!-- Grille des évaluations avec bouton d'ajout -->
+    <div class="evaluations-section">
+        <h3>Évaluations</h3>
+        {{ afficher_grille('evaluation', flan.evaluations, current_user, form_eval, etablissement, flan) }}
+    </div>
 
     <!-- Boutons d'action -->
     <div class="flan-actions">
@@ -20,7 +21,6 @@
                 Retour à {{ flan.etablissement.nom }}
             </a>
         </div>
-
     </div>
 </div>
 {% endblock %}
